--- a/Media_Datavista_P2.html
+++ b/Media_Datavista_P2.html
@@ -373,33 +373,33 @@
               </tr>
               <tr>
                 <td style="padding:8px;border:1px solid var(--line)">Kecepatan</td>
-                <td style="padding:8px;border:1px solid var(--line)"></td>
-                <td style="padding:8px;border:1px solid var(--line)"></td>
-                <td style="padding:8px;border:1px solid var(--line)"></td>
+                <td style="padding:8px;border:1px solid var(--line)"><input type="text" placeholder="Masukkan penjelasan..." style="width:100%;padding:6px 8px;border:1px solid #e2e8f0;border-radius:6px;font-size:13px"></td>
+                <td style="padding:8px;border:1px solid var(--line)"><input type="text" placeholder="Masukkan penjelasan..." style="width:100%;padding:6px 8px;border:1px solid #e2e8f0;border-radius:6px;font-size:13px"></td>
+                <td style="padding:8px;border:1px solid var(--line)"><input type="text" placeholder="Masukkan penjelasan..." style="width:100%;padding:6px 8px;border:1px solid #e2e8f0;border-radius:6px;font-size:13px"></td>
               </tr>
               <tr>
                 <td style="padding:8px;border:1px solid var(--line)">Biaya</td>
-                <td style="padding:8px;border:1px solid var(--line)"></td>
-                <td style="padding:8px;border:1px solid var(--line)"></td>
-                <td style="padding:8px;border:1px solid var(--line)"></td>
+                <td style="padding:8px;border:1px solid var(--line)"><input type="text" placeholder="Masukkan penjelasan..." style="width:100%;padding:6px 8px;border:1px solid #e2e8f0;border-radius:6px;font-size:13px"></td>
+                <td style="padding:8px;border:1px solid var(--line)"><input type="text" placeholder="Masukkan penjelasan..." style="width:100%;padding:6px 8px;border:1px solid #e2e8f0;border-radius:6px;font-size:13px"></td>
+                <td style="padding:8px;border:1px solid var(--line)"><input type="text" placeholder="Masukkan penjelasan..." style="width:100%;padding:6px 8px;border:1px solid #e2e8f0;border-radius:6px;font-size:13px"></td>
               </tr>
               <tr>
                 <td style="padding:8px;border:1px solid var(--line)">Jangkauan</td>
-                <td style="padding:8px;border:1px solid var(--line)"></td>
-                <td style="padding:8px;border:1px solid var(--line)"></td>
-                <td style="padding:8px;border:1px solid var(--line)"></td>
+                <td style="padding:8px;border:1px solid var(--line)"><input type="text" placeholder="Masukkan penjelasan..." style="width:100%;padding:6px 8px;border:1px solid #e2e8f0;border-radius:6px;font-size:13px"></td>
+                <td style="padding:8px;border:1px solid var(--line)"><input type="text" placeholder="Masukkan penjelasan..." style="width:100%;padding:6px 8px;border:1px solid #e2e8f0;border-radius:6px;font-size:13px"></td>
+                <td style="padding:8px;border:1px solid var(--line)"><input type="text" placeholder="Masukkan penjelasan..." style="width:100%;padding:6px 8px;border:1px solid #e2e8f0;border-radius:6px;font-size:13px"></td>
               </tr>
               <tr>
                 <td style="padding:8px;border:1px solid var(--line)">Akurasi Data</td>
-                <td style="padding:8px;border:1px solid var(--line)"></td>
-                <td style="padding:8px;border:1px solid var(--line)"></td>
-                <td style="padding:8px;border:1px solid var(--line)"></td>
+                <td style="padding:8px;border:1px solid var(--line)"><input type="text" placeholder="Masukkan penjelasan..." style="width:100%;padding:6px 8px;border:1px solid #e2e8f0;border-radius:6px;font-size:13px"></td>
+                <td style="padding:8px;border:1px solid var(--line)"><input type="text" placeholder="Masukkan penjelasan..." style="width:100%;padding:6px 8px;border:1px solid #e2e8f0;border-radius:6px;font-size:13px"></td>
+                <td style="padding:8px;border:1px solid var(--line)"><input type="text" placeholder="Masukkan penjelasan..." style="width:100%;padding:6px 8px;border:1px solid #e2e8f0;border-radius:6px;font-size:13px"></td>
               </tr>
               <tr>
                 <td style="padding:8px;border:1px solid var(--line)">Kemudahan</td>
-                <td style="padding:8px;border:1px solid var(--line)"></td>
-                <td style="padding:8px;border:1px solid var(--line)"></td>
-                <td style="padding:8px;border:1px solid var(--line)"></td>
+                <td style="padding:8px;border:1px solid var(--line)"><input type="text" placeholder="Masukkan penjelasan..." style="width:100%;padding:6px 8px;border:1px solid #e2e8f0;border-radius:6px;font-size:13px"></td>
+                <td style="padding:8px;border:1px solid var(--line)"><input type="text" placeholder="Masukkan penjelasan..." style="width:100%;padding:6px 8px;border:1px solid #e2e8f0;border-radius:6px;font-size:13px"></td>
+                <td style="padding:8px;border:1px solid var(--line)"><input type="text" placeholder="Masukkan penjelasan..." style="width:100%;padding:6px 8px;border:1px solid #e2e8f0;border-radius:6px;font-size:13px"></td>
               </tr>
             </table>
           </div>
