Fix image source path in index.html

--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
             <div style="margin-bottom:18px;font-size:16px">Perhatikan fenomena penggunaan HP di bawah ini! Perhatikan informasi
 yang berupa angka, waktu, atau perbandingan, bukan pendapat pribadi</div>
             <div style="margin-bottom:18px;text-align:center">
-              <img src="/images/info.jpeg" alt="Infografis" style="max-width:100%;height:auto;border-radius:10px;box-shadow:0 8px 20px rgba(15,23,42,0.12)">
+              <img src="info.jpeg" alt="Infografis" style="max-width:100%;height:auto;border-radius:10px;box-shadow:0 8px 20px rgba(15,23,42,0.12)">
             </div>
             <div style="margin-bottom:18px;font-size:15px;font-weight:700">Pertanyaan</div>
             <div style="margin-bottom:18px">
