--- a/index.html
+++ b/index.html
@@ -456,11 +456,12 @@
               <div style="margin-top:32px">
                 <div class="genty" style="font-size:18px;font-weight:700;margin-bottom:14px;text-align:center;color:#0f172a">📂 Pilih Pertemuan</div>
                 <div class="toc-grid" style="margin-bottom:32px">
-                  <button class="toc-item genty" onclick="updateSlide(91)">Pertemuan 1</button>
-                  <button class="toc-item genty" onclick="updateSlide(92)">Pertemuan 2</button>
-                  <button class="toc-item genty" onclick="updateSlide(93)">Pertemuan 3</button>
-                  <button class="toc-item genty" onclick="updateSlide(94)">Pertemuan 4</button>
-                  <button class="toc-item genty" onclick="updateSlide(95)">Pertemuan 5</button>
+                  <button class="toc-item genty" onclick="updateSlide(91)">Pertanyaan Mendasar</button>
+                  <button class="toc-item genty" onclick="updateSlide(92)">Perencanaan dan Penjadwalan Proyek
+</button>
+                  <button class="toc-item genty" onclick="updateSlide(93)">Pengumpulan Data</button>
+                  <button class="toc-item genty" onclick="updateSlide(94)">Pengolahan dan Penyajian Data</button>
+                  <button class="toc-item genty" onclick="updateSlide(95)">Presentasi, Refleksi dan Evaluasi akhir</button>
                 </div>
               </div>
               
