--- a/Media_Datavista_P2.html
+++ b/Media_Datavista_P2.html
@@ -605,10 +605,10 @@
           <div style="margin-bottom:14px;font-size:15px;font-weight:700">C. Menentukan Cara Pengumpulan Data</div>
           <div style="margin-bottom:10px;font-size:15px">Dari tabel bagian B di atas, cara pengumpulan data apa yang akan kalian gunakan?</div>
           <div style="margin-bottom:18px;font-size:15px;line-height:2.2">
-            <label style="display:block;margin-bottom:8px"><input type="checkbox" name="carapengumpulan" value="Angket Tertulis"> ☐ Angket Tertulis (responden mengisi di kertas)</label>
-            <label style="display:block;margin-bottom:8px"><input type="checkbox" name="carapengumpulan" value="Angket Digital"> ☐ Angket Digital (responden mengisi di aplikasi/online)</label>
-            <label style="display:block;margin-bottom:8px"><input type="checkbox" name="carapengumpulan" value="Wawancara"> ☐ Wawancara (peneliti bertanya langsung)</label>
-            <label style="display:block"><input type="checkbox" name="carapengumpulan" value="Kombinasi"> ☐ Kombinasi (lebih dari satu cara)</label>
+            <label style="display:block;margin-bottom:8px"><input type="checkbox" name="carapengumpulan" value="Angket Tertulis"> Angket Tertulis (responden mengisi di kertas)</label>
+            <label style="display:block;margin-bottom:8px"><input type="checkbox" name="carapengumpulan" value="Angket Digital"> Angket Digital (responden mengisi di aplikasi/online)</label>
+            <label style="display:block;margin-bottom:8px"><input type="checkbox" name="carapengumpulan" value="Wawancara"> Wawancara (peneliti bertanya langsung)</label>
+            <label style="display:block"><input type="checkbox" name="carapengumpulan" value="Kombinasi"> Kombinasi (lebih dari satu cara)</label>
           </div>
           
           <div style="margin-top:24px;display:flex;justify-content:space-between;gap:12px">
@@ -914,3 +914,4 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </body>
 </html>
+
